--- a/index.html
+++ b/index.html
@@ -80,6 +80,16 @@
             padding: 0.2rem;
             margin-left: 0.9rem;
         }
+        
+        @media (min-width: 800px) {
+            .controls {
+                display: none;
+            }
+            
+            button {
+                display: none;
+            }
+        }    
     </style>
     <script src="game.js" defer type="module"></script>
 </head>
