--- a/index.html
+++ b/index.html
@@ -81,13 +81,9 @@
             margin-left: 0.9rem;
         }
         
-        @media (min-width: 800px) {
-            .controls {
-                display: none;
-            }
-            
-            button {
-                display: none;
+        @media (min-width: 600px) {
+            body {
+                flex-direction: row;
             }
         }    
     </style>
