--- a/index.html
+++ b/index.html
@@ -85,6 +85,14 @@
             body {
                 flex-direction: row;
             }
+            
+            #game-board {
+                margin-left: auto;
+            }
+            
+            .controls {
+                margin-left: auto;
+            }
         }    
     </style>
     <script src="game.js" defer type="module"></script>
