--- a/index.html
+++ b/index.html
@@ -86,12 +86,12 @@
                 flex-direction: row;
             }
             
-            #game-board {
-                margin-left: auto;
+            .controls {
+                display: none;
             }
             
-            .controls {
-                margin-left: auto;
+            button {
+                display: none;
             }
         }    
     </style>
